# jfactor

./: Cargo.toml  LICENSE-MIT.txt  README.md  index.html
doc/jfactor/: fn.factor.html  fn.largest_prime_factor.html  index.html
doc/jfactor/factor/: fn.factor.html  fn.largest_prime_factor.html
src/: factor.rs  lib.rs
